--- a/txs.html
+++ b/txs.html
@@ -13,17 +13,13 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-home">Home | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a></span></p>
+                <p><span id="menu-home"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | Transactions</span></p>
             </div>
         </section>
         
         <section id="blockchain-info">
             <h2>Blockchain Information</h2>
             <p>Current Block Height: <span id="block-height">Loading...</span></p>
-            <p>Current Block Reward: <span id="block-reward">Loading...</span></p>
-            <p>Number of Blocks in the Past Day: <span id="blocks-past-day">Loading...</span></p>
-            <p>Current Total Supply: <span id="total-supply">Loading...</span></p>
-            <p>QORT Minted Per Day (Estimated): <span id="qort-per-day">Loading...</span></p>
         </section>
 
         <section id="transaction-info">
@@ -33,21 +29,26 @@
             </div>
         </section>
 
-        <section id="online-accounts">
-            <h2>Online Accounts</h2>
-            <table id="accounts-table">
+        <section id="recent-txs">
+            <h2>Recent Transactions</h2>
+            <table id="txs-table">
                 <thead>
                     <tr>
-                        <th>Level</th>
-                        <th>Accounts</th>
+                        <th>Height</th>
+                        <th>Signature</th>
+                        <th>TX Type</th>
+                        <th>Creator</th>
+                        <th>Fee Paid</th>
+                        <th>Time</th>
                     </tr>
                 </thead>
                 <tbody>
                 </tbody>
             </table>
+            <button id="load-more">See 100 More Blocks</button>
         </section>
     </main>
 
-    <script src="script.js"></script>
+    <script src="txs.js"></script>
 </body>
 </html>
