--- a/blocks.html
+++ b/blocks.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.1.0-beta</title>
+    <title>Qombo: Data Navigator - v1.1.1-beta</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Qombo: Data Navigator - v1.1.0-beta</h1>
+        <h1>Qombo: Data Navigator - v1.1.1-beta</h1>
     </header>
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-blocks"><a href="index.html">Home</a> | Blocks | <a href="txs.html">Transactions</a></span></p>
+                <p><span id="menu-blocks"><a href="index.html">Home</a> | Blocks | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a></span></p>
             </div>
         </section>
         
