--- a/accounts.html
+++ b/accounts.html
@@ -13,7 +13,7 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-home">Home | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a></span></p>
+                <p><span id="menu-accounts"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | Accounts</span></p>
             </div>
         </section>
         
@@ -26,28 +26,16 @@
             <p>QORT Minted Per Day (Estimated): <span id="qort-per-day">Loading...</span></p>
         </section>
 
-        <section id="transaction-info">
-            <h2>Unconfirmed Transactions</h2>
-            <p>Total Unconfirmed Transactions: <span id="total-unconfirmed">Loading...</span></p>
-            <div id="transaction-types">
+        <section id="account-search">
+            <h2>Account Information - <button id="search-button">Search</button><input type="text" id="search-input" placeholder="Enter address or name"></h2>
+            <div id="account-details">
             </div>
-        </section>
-
-        <section id="online-accounts">
-            <h2>Online Accounts</h2>
-            <table id="accounts-table">
-                <thead>
-                    <tr>
-                        <th>Level</th>
-                        <th>Accounts</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
+            <h3>Search Results</h3>
+            <div id="account-results">
+            </div>
         </section>
     </main>
 
-    <script src="script.js"></script>
+    <script src="accounts.js"></script>
 </body>
 </html>
