Fix Block Height tables

--- a/apps.html
+++ b/apps.html
@@ -19,7 +19,12 @@
         
         <section id="blockchain-info">
             <h2>Blockchain Information</h2>
-            <p>Current Block Height: <span id="block-height">Loading...</span></p>
+            <table id="info-table">
+                <tr>
+                    <th>Current Block Height</th>
+                    <td></td>
+                </tr>
+            </table>
         </section>
 
         <section id="app-search">
