--- a/trades.html
+++ b/trades.html
@@ -19,7 +19,12 @@
         
         <section id="blockchain-info">
             <h2>Blockchain Information</h2>
-            <p>Current Block Height: <span id="block-height">Loading...</span></p>
+            <table id="info-table">
+                <tr>
+                    <th>Current Block Height</th>
+                    <td></td>
+                </tr>
+            </table>
             <div id="daily-volumes">
                 <h3>Daily Volume</h3>
                 <ul>
