--- a/blocks.html
+++ b/blocks.html
@@ -28,7 +28,7 @@
         </section>
         
         <section id="block-search">
-            <h2>Block Details - <button id="search-button">Search</button><input type="text" id="search-input" placeholder="Enter block height"></h2>
+            <h2>Block Details - <button id="search-button">Search</button><input type="text" id="search-input" placeholder="(Not working yet) Enter block height"></h2>
             <div id="block-details"></div>
         </section>
 
