--- a/accounts.html
+++ b/accounts.html
@@ -13,7 +13,7 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-accounts"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | Accounts | <a href="apps.html">Apps</a></span></p>
+                <p><span id="menu-accounts"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | Accounts | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a></span></p>
             </div>
         </section>
         
