--- a/websites.html
+++ b/websites.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.3.0</title>
+    <title>Qombo: Data Navigator - v1.3.1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Qombo: Data Navigator - v1.3.0</h1>
+        <h1>Qombo: Data Navigator - v1.3.1</h1>
     </header>
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-apps"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="Accounts.html">Accounts</a> | Apps | <a href="websites.html">Websites</a></span></p>
+                <p><span id="menu-websites"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | Websites</span></p>
             </div>
         </section>
         
@@ -27,16 +27,16 @@
             </table>
         </section>
 
-        <section id="app-search">
-            <h2>App Information - <button id="search-button">Search</button><input type="text" id="search-input" placeholder="Enter search query"></h2>
-            <div id="app-details">
+        <section id="website-search">
+            <h2>Website Information - <button id="search-button">Search</button><input type="text" id="search-input" placeholder="Enter search query"></h2>
+            <div id="website-details">
             </div>
             <h3>Search Results</h3>
-            <div id="app-results">
+            <div id="website-results">
             </div>
         </section>
     </main>
 
-    <script src="apps.js"></script>
+    <script src="websites.js"></script>
 </body>
 </html>
