--- a/apps.html
+++ b/apps.html
@@ -13,7 +13,7 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-apps"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="Accounts.html">Accounts</a> | Apps | <a href="websites.html">Websites</a></span></p>
+                <p><span id="menu-apps"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | Apps | <a href="websites.html">Websites</a></span></p>
             </div>
         </section>
         
