--- a/blocks.html
+++ b/blocks.html
@@ -18,7 +18,7 @@
         </section>
         
         <section id="blockchain-info">
-            <h2>Blockchain Information</h2>
+            <h2>Current Blockchain Information</h2>
             <table id="info-table">
                 <tr>
                     <th>Current Block Height</th>
