Fix Unconfirmed Tx tables

--- a/txs.html
+++ b/txs.html
@@ -29,9 +29,10 @@
 
         <section id="transaction-info">
             <h2>Unconfirmed Transactions</h2>
-            <p>Total Unconfirmed Transactions: <span id="total-unconfirmed">Loading...</span></p>
-            <div id="transaction-types">
-            </div>
+            <table id="transaction-table">
+                <tr><th>Total Unconfirmed</th></tr>
+                <tr><th>Loading...</th></tr>
+            </table>
         </section>
 
         <section id="recent-txs">
