Fix Online Account tables

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <h2>Online Accounts</h2>
             <table id="accounts-table">
                 <thead>
-                    <tr>
-                        <th>Level</th>
-                        <th>Accounts</th>
-                    </tr>
+                    <tr><th>Level:</th><th>0</th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th><th>F/10</th></tr>
+                    <tr><th id="total-count">Total:</th><td id="level-0-count"></td><td id="level-1-count"></td><td id="level-2-count"></td>
+                    <td id="level-3-count"></td><td id="level-4-count"></td><td id="level-5-count"></td><td id="level-6-count"></td>
+                    <td id="level-7-count"></td><td id="level-8-count"></td><td id="level-9-count"></td><td id="level-10-count"></td></tr>
                 </thead>
                 <tbody>
                 </tbody>
