Fix Blocks page

--- a/blocks.html
+++ b/blocks.html
@@ -20,15 +20,12 @@
         <section id="blockchain-info">
             <h2>Current Blockchain Information</h2>
             <table id="info-table">
-                <tr>
-                    <th>Current Block Height</th>
-                    <td></td>
-                </tr>
+                <tr><th>Current Block Height</th><td id="block-height"></td></tr>
             </table>
         </section>
         
         <section id="block-search">
-            <h2>Block Details - <button id="search-button">Search</button><input type="text" id="search-input" placeholder="(Not working yet) Enter block height"></h2>
+            <h2>Block Details - <button id="search-button">Search</button><input type="text" id="search-input" placeholder="Enter block height"></h2>
             <div id="block-details"></div>
         </section>
 
