--- a/trades.html
+++ b/trades.html
@@ -20,10 +20,7 @@
         <section id="blockchain-info">
             <h2>Current Blockchain Information</h2>
             <table id="info-table">
-                <tr>
-                    <th>Current Block Height</th>
-                    <td></td>
-                </tr>
+                <tr><th>Current Block Height</th><td id="block-height"></td></tr>
             </table>
             <div id="daily-volumes">
                 <h3>Daily Volume</h3>
