--- a/polls.html
+++ b/polls.html
@@ -13,7 +13,7 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-apps"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | Apps | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a></span></p>
+                <p><span id="menu-polls"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | Polls</span></p>
             </div>
         </section>
         
@@ -24,16 +24,16 @@
             </table>
         </section>
 
-        <section id="app-search">
-            <h2>App Information - <button id="search-button">Search</button><input type="text" id="search-input" placeholder="Enter search query"></h2>
-            <div id="app-details">
+        <section id="poll-search">
+            <h2>Poll Information</h2>
+            <div id="poll-details">
             </div>
             <h3>Search Results</h3>
-            <div id="app-results">
+            <div id="poll-results">
             </div>
         </section>
     </main>
 
-    <script src="apps.js"></script>
+    <script src="polls.js"></script>
 </body>
 </html>
