--- a/trades.html
+++ b/trades.html
@@ -13,7 +13,7 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-trades"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | Trades | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a></span></p>
+                <p><span id="menu-trades"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | Trades | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a></span></p>
             </div>
         </section>
         
