--- a/test.html
+++ b/test.html
@@ -32,6 +32,7 @@
                 <tr><th>selfSponsorshipAlgoV2SnapshotTimestamp</th><td>1706745600000</td><td id="date-snapshot"></td><td id="until-snapshot"></td></tr>
                 <tr><th>penaltyFixHeight = 1589200</th><td id="timestamp-fix"></td><td id="date-fix"></td><td id="until-fix"></td></tr>
                 <tr><th>enableTransferPrivsTimestamp</th><td>1709251200000</td><td id="date-enable"></td><td id="until-enable"></td></tr>
+                <tr><th id="height-reward">Next Block Reward = </th><td id="timestamp-reward"></td><td id="date-reward"></td><td id="until-reward"></td></tr>
             </table>
         </section>
     </main>
