Rename Test page to Extra

--- a/test.html
+++ b/test.html
@@ -13,13 +13,13 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-test"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a></span></p>
+                <p><span id="menu-extra"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | Extra</span></p>
             </div>
         </section>
         
-        <section id="test-info">
-            <h3>Test Page - For Development Purposes</h3>
-            <div id="test-div"></div>
+        <section id="extra-info">
+            <h3>extra Page - For Development Purposes</h3>
+            <div id="extra-div"></div>
             <table><tr><th>Current Block</th><td id="block-height"></td><th>Current Timestamp</th><td id="current-timestamp"></td></tr>
                 <tr><th>Blocks/Day</th><td id="blocks-past-day"></td><th>Seconds/Block</th><td id="block-time"></td></tr>
             </table>
@@ -37,6 +37,6 @@
         </section>
     </main>
 
-    <script src="test.js"></script>
+    <script src="extra.js"></script>
 </body>
 </html>
