--- a/extra.html
+++ b/extra.html
@@ -18,7 +18,7 @@
         </section>
         
         <section id="extra-info">
-            <h3>extra Page - For Development Purposes</h3>
+            <h3>Extra Page - For Development Purposes</h3>
             <div id="extra-div"></div>
             <table><tr><th>Current Block</th><td id="block-height"></td><th>Current Timestamp</th><td id="current-timestamp"></td></tr>
                 <tr><th>Blocks/Day</th><td id="blocks-past-day"></td><th>Seconds/Block</th><td id="block-time"></td></tr>
@@ -32,7 +32,7 @@
                 <tr><th>selfSponsorshipAlgoV2SnapshotTimestamp</th><td>1706745600000</td><td id="date-snapshot"></td><td id="until-snapshot"></td></tr>
                 <tr><th>penaltyFixHeight = 1589200</th><td id="timestamp-fix"></td><td id="date-fix"></td><td id="until-fix"></td></tr>
                 <tr><th>enableTransferPrivsTimestamp</th><td>1709251200000</td><td id="date-enable"></td><td id="until-enable"></td></tr>
-                <tr><th id="height-reward">Next Block Reward = </th><td id="timestamp-reward"></td><td id="date-reward"></td><td id="until-reward"></td></tr>
+                <tr><th id="height-reward">Next Reward = </th><td id="timestamp-reward"></td><td id="date-reward"></td><td id="until-reward"></td></tr>
             </table>
         </section>
     </main>
