--- a/extra.html
+++ b/extra.html
@@ -28,11 +28,21 @@
         <section id="trigger-info">
             <h3>Feature Triggers</h3>
             <table>
+                <tr><th id="height-reward">Next Reward = </th><td id="timestamp-reward"></td><td id="date-reward"></td><td id="until-reward"></td></tr>
+                <tr><th>genesisBlockTimestamp</th><td>1593450000000</td><td id="date-genesis"></td><td id="until-genesis"></td></tr>
+                <tr><th>nameFee 0.001 -> 5</th><td>1645372800000</td><td id="date-name-fee1"></td><td id="until-name-fee1"></td></tr>
+                <tr><th>nameFee 5 -> 1.25</th><td>1651420800000</td><td id="date-name-fee2"></td><td id="until-name-fee2"></td></tr>
+                <tr><th>rewardShares 6 -> 3</th><td>1657382400000</td><td id="date-reward-shares1"></td><td id="until-reward-shares1"></td></tr>
+                <tr><th>selfSponsorshipAlgoV1SnapshotTimestamp</th><td>1670230000000</td><td id="date-snapshot1"></td><td id="until-snapshot1"></td></tr>
+                <tr><th>selfSponsorshipAlgoV1Height = 1092400</th><td id="timestamp-algo1"></td><td id="date-algo1"></td><td id="until-algo1"></td></tr>
+                <tr><th>unitFee 0.001 -> 0.01</th><td>1692118800000</td><td id="date-unit-fee"></td><td id="until-unit-fee"></td></tr>
+                <tr><th>rewardShares 3 -> 2</th><td>1698508800000</td><td id="date-reward-shares2"></td><td id="until-reward-shares2"></td></tr>
+                <tr><th>blockRewardBatchStartHeight = 1508000</th><td id="timestamp-batch"></td><td id="date-batch"></td><td id="until-batch"></td></tr>
                 <tr><th>disableTransferPrivsTimestamp</th><td>1706745000000</td><td id="date-disable"></td><td id="until-disable"></td></tr>
-                <tr><th>selfSponsorshipAlgoV2SnapshotTimestamp</th><td>1706745600000</td><td id="date-snapshot"></td><td id="until-snapshot"></td></tr>
+                <tr><th>selfSponsorshipAlgoV2SnapshotTimestamp</th><td>1706745600000</td><td id="date-snapshot2"></td><td id="until-snapshot2"></td></tr>
                 <tr><th>penaltyFixHeight = 1589200</th><td id="timestamp-fix"></td><td id="date-fix"></td><td id="until-fix"></td></tr>
                 <tr><th>enableTransferPrivsTimestamp</th><td>1709251200000</td><td id="date-enable"></td><td id="until-enable"></td></tr>
-                <tr><th id="height-reward">Next Reward = </th><td id="timestamp-reward"></td><td id="date-reward"></td><td id="until-reward"></td></tr>
+                <tr><th>selfSponsorshipAlgoV2Height = 9999999</th><td id="timestamp-algo2"></td><td id="date-algo2"></td><td id="until-algo2"></td></tr>
             </table>
         </section>
     </main>
