--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <button id="login-button">Login</button>
     <div id="qombo-logo">Qombo Data<br>Navigator v2.0.0</div>
     <table class="top-bar"><tr>
-        <td class="topbar-item" id="node-status">- Disconnected</td>
-        <td class="topbar-item" id="node-address"></td>
-        <td class="topbar-item" id="node-peers"></td>
-        <td class="topbar-item" id="node-something"></td>
+        <td class="topbar-item" id="node-status">Disconnected</td>
+        <td class="topbar-item" id="node-height">Height: N/A</td>
+        <td class="topbar-item" id="node-peers">Peers: N/A</td>
+        <td class="topbar-item" id="node-version">Version: N/A</td>
     </tr><tr>
-        <td class="topbar-item" id="user-status">- Not Logged In</td>
-        <td class="topbar-item" id="user-account"></td>
+        <td class="topbar-item" id="user-status">Not Logged In</td>
+        <td class="topbar-item" id="user-address"></td>
         <td class="topbar-item" id="user-blocks"></td>
-        <td class="topbar-item" id="user-something"></td>
+        <td class="topbar-item" id="user-qort"></td>
     </tr></table>
     </header>
     <div id="sidebar" class="sidebar">
