--- a/txs.html
+++ b/txs.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.4.9</title>
+    <title>Qombo: Data Navigator - v1.5.0</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Qombo: Data Navigator - v1.4.9</h1>
+        <h1>Qombo: Data Navigator - v1.5.0</h1>
     </header>
     <main>
         <section id="menu-bar">
@@ -21,6 +21,7 @@
             <h2>Current Blockchain Information</h2>
             <table id="info-table">
                 <tr><th>Current Block Height</th><td id="block-height"></td></tr>
+                <tr><th>Current QDN Size</th><td id="qdn-size"></td></tr>
             </table>
         </section>
 
@@ -41,7 +42,8 @@
                         <th>Signature</th>
                         <th>TX Type</th>
                         <th>Creator</th>
-                        <th>Fee Paid</th>
+                        <th>Data</th>
+                        <th>Fee</th>
                         <th>Time</th>
                     </tr>
                 </thead>
