--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.5.0</title>
+    <title>Qombo: Data Navigator - v1.5.1</title>
     <link rel="icon" type="image/png" href="qombo-favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Qombo: Data Navigator - v1.5.0</h1>
+        <h1>Qombo: Data Navigator - v1.5.1</h1>
     </header>
     <main>
         <section id="menu-bar">
@@ -44,7 +44,7 @@
                     <td id="level-7-count"></td><td id="level-8-count"></td><td id="level-9-count"></td><td id="level-10-count"></td></tr>
                     <tr><th>QORT/Minter/1000</th><td>0</td><td id="level-1-reward"></td><td id="level-2-reward"></td>
                     <td id="level-3-reward"></td><td id="level-4-reward"></td><td id="level-5-reward"></td><td id="level-6-reward"></td>
-                    <td id="level-7-reward"></td><td id="level-8-reward">0</td><td id="level-9-reward">0</td><td id="level-10-reward"></td></tr>
+                    <td id="level-7-reward"></td><td id="level-8-reward"></td><td id="level-9-reward">0</td><td id="level-10-reward"></td></tr>
                 </thead>
                 <tbody>
                 </tbody>
