--- a/assets.html
+++ b/assets.html
@@ -13,7 +13,7 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-accounts"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | Accounts | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | <a href="extra.html">Extra</a></span></p>
+                <p><span id="menu-assets"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | Assets | <a href="extra.html">Extra</a></span></p>
             </div>
         </section>
         
@@ -25,16 +25,13 @@
             </table>
         </section>
 
-        <section id="account-search">
-            <h2>Account Information - <button id="search-button">Search</button><input type="text" id="search-input" placeholder="Enter address or name"></h2>
-            <div id="account-details">
-            </div>
-            <h3>Search Results</h3>
-            <div id="account-results">
+        <section id="asset-info">
+            <h2>Asset Information</h2>
+            <div id="asset-details">
             </div>
         </section>
     </main>
 
-    <script src="accounts.js"></script>
+    <script src="assets.js"></script>
 </body>
 </html>
