--- a/txs.html
+++ b/txs.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.5.1</title>
+    <title>Qombo: Data Navigator - v1.6.0</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Qombo: Data Navigator - v1.5.1</h1>
+        <h1>Qombo: Data Navigator - v1.6.0</h1>
     </header>
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-txs"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | Transactions | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a></span> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | <a href="extra.html">Extra</a></p>
+                <p><span id="menu-txs"><a href="index.html">Home</a> | <a href="blocks.html">Blocks</a> | Transactions | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a></span> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | <a href="extra.html">Extra</a></p>
             </div>
         </section>
         
