Store address and pubkey when logged in

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <td class="topbar-item" id="user-blocks"></td>
         <td class="topbar-item" id="user-qort"></td>
     </tr></table>
+    <table class="login-info"><tr><td id="login-address"></td><td id="login-pubkey"></td></tr></table>
     </header>
     <div id="sidebar" class="sidebar">
         <a class="menu-item" id="menu-home" href="#" onclick="showSection('home')">Home</a>
