--- a/taxes.html
+++ b/taxes.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.6.1</title>
+    <title>Qombo: Data Navigator - v1.6.2</title>
     <link rel="stylesheet" href="old-style.css">
 </head>
 <body>
     <header>
-        <h1>Qombo: Data Navigator - v1.6.1</h1>
+        <h1>Qombo: Data Navigator - v1.6.2</h1>
     </header>
     <main>
         <section id="menu-bar">
@@ -27,16 +27,17 @@
         <section id="taxes-info">
             <h3>Extra Minting Accounts</h3>
             <table>
-                <tr><th>crowetic's Accounts: crowetic</th><th>QiNKXRfnX9mTodSed1yRQexhL1HA42RHHo</th><th>Level 7</th><th>1595893 Blocks</th></tr>
-                <tr><td>'Extra' Founder Account</td><td>QZMzF4iTBV93LP5Vkv7Ka3Q2xjdUwcUhcV</td><td>Level 6</td><td>1408725 Blocks</td></tr>
-                <tr><td>DevFund</td><td>QWfYVQfuz2rVskYkpkVvLxL3kUPmBgKhHV</td><td>Level 4</td><td>429478 Blocks</td></tr>
-                <tr><th>AlphaX's Accounts: AlphaX</th><th>QiTygNmENd8bjyiaK1WwgeX9EF1H8Kapfq</th><th>Level 6</th><th>1015054 Blocks</th></tr>
-                <tr><td>Public Node 1 / AlphaX-LIN</td><td>Qb5rprTsoSoKaMcdwLFL7jP3eyhK3LGqNm</td><td>Level 4</td><td>586120 Blocks</td></tr>
-                <tr><td>Public Node 2 / AlphaX-WIN</td><td>QZm6GbBJuLJnTbftJAaJtw2ZJqXiDTu2pD</td><td>Level 4</td><td>552370 Blocks</td></tr>
-                <tr><td>Public Node 3 / AlphaX-PI</td><td>QScfgds57u1zEPWyjL3GyKsZQ6PRbuVv2G</td><td>Level 4</td><td>600341 Blocks</td></tr>
+                <tr><th>crowetic's Accounts: crowetic</th><th>QiNKXRfnX9mTodSed1yRQexhL1HA42RHHo</th><th>Level 7</th><th>1600893 Blocks</th></tr>
+                <tr><td>DevFund</td><td>QWfYVQfuz2rVskYkpkVvLxL3kUPmBgKhHV</td><td>Level 4</td><td>434478 Blocks</td></tr>
+                <tr><th>QuickMythril's Accounts: QuickMythril</th><th>QT4zHex8JEULmBhYmKd5UhpiNA46T5wUko</th><th>Level 6</th><th>1273318 Blocks</th></tr>
+                <tr><td>CommunityFund</td><td>QVqE3qG2CjgUjJZre76pr17z549B5FjbHz</td><td>Level 6</td><td>1373362 Blocks</td></tr>
+                <tr><th>AlphaX's Accounts: AlphaX</th><th>QiTygNmENd8bjyiaK1WwgeX9EF1H8Kapfq</th><th>Level 6</th><th>1020054 Blocks</th></tr>
+                <tr><td>Public Node 1 / AlphaX-LIN</td><td>Qb5rprTsoSoKaMcdwLFL7jP3eyhK3LGqNm</td><td>Level 4</td><td>588120 Blocks</td></tr>
+                <tr><td>Public Node 2 / AlphaX-WIN</td><td>QZm6GbBJuLJnTbftJAaJtw2ZJqXiDTu2pD</td><td>Level 4</td><td>557370 Blocks</td></tr>
+                <tr><td>Public Node 3 / AlphaX-PI</td><td>QScfgds57u1zEPWyjL3GyKsZQ6PRbuVv2G</td><td>Level 4</td><td>605341 Blocks</td></tr>
                 <tr><td>Public Node 4 / AlphaX-MAC</td><td>QWXnwCZit9gfz6zeaRuEF9cZUFDxP6f2Uw</td><td>Level 3</td><td>280567 Blocks</td></tr>
-                <tr><td>Public Node 5 / AlphaX-M1</td><td>QicHThpzJcEJu3cF3enHCgNA6DzmzGx6AR</td><td>Level 3</td><td>311438 Blocks</td></tr>
-                <tr><td>AlphaX-DEV</td><td>QLkPjoq3Af2WD1XqW1VCktwwMXiaJ5oWbF</td><td>Level 3</td><td>282181 Blocks</td></tr>
+                <tr><td>Public Node 5 / AlphaX-M1</td><td>QicHThpzJcEJu3cF3enHCgNA6DzmzGx6AR</td><td>Level 3</td><td>316438 Blocks</td></tr>
+                <tr><td>AlphaX-DEV</td><td>QLkPjoq3Af2WD1XqW1VCktwwMXiaJ5oWbF</td><td>Level 3</td><td>287181 Blocks</td></tr>
                 <tr><td>AlphaX-TAB</td><td>Qb6w36ryjQv3chCmjrk6EjUeqk1TZ889Me</td><td>Level 3</td><td>241513 Blocks</td></tr>
                 <tr><td>AlphaX-LTD</td><td>QVioPMcFpTa73gwqckZwE49sSr9KdR1RZF</td><td>Level 2</td><td>184441 Blocks</td></tr>
                 <tr><td>AlphaX-APT</td><td>Qc9yhHdtaHYdVMkUXyyfprht4SeX21FFch</td><td>Level 2</td><td>135270 Blocks</td></tr>
