--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qombo: Data Navigator - v1.9.9c</title>
+    <title>Qombo: Data Navigator - v1.9.9d</title>
     <link rel="icon" type="image/png" href="qombo-favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
     <button id="menu-button" onclick="toggleSidebar()">☰</button>
     <button id="login-button">Login</button>
-    <div id="qombo-logo">Qombo Data<br>Navigator v1.9.9c</div>
+    <div id="qombo-logo">Qombo Data<br>Navigator v1.9.9d</div>
     <table class="top-bar"><tr>
         <td class="topbar-item"><span id="node-status">Disconnected</span>
             <button id="node-button" onclick="refreshNode()">Refresh</button>
@@ -53,13 +53,13 @@
             <h3>Online Accounts</h3>
             <table id="home-accounts">
                 <thead>
-                    <tr><th>Level:</th><th>0</th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th><th>F/10</th></tr>
-                    <tr><th id="total-count">Total:</th><td id="level-0-count"></td><td id="level-1-count"></td><td id="level-2-count"></td>
-                    <td id="level-3-count"></td><td id="level-4-count"></td><td id="level-5-count"></td><td id="level-6-count"></td>
-                    <td id="level-7-count"></td><td id="level-8-count"></td><td id="level-9-count"></td><td id="level-10-count"></td></tr>
-                    <tr><th>QORT/Minter/1000</th><td>0</td><td id="level-1-reward"></td><td id="level-2-reward"></td>
-                    <td id="level-3-reward"></td><td id="level-4-reward"></td><td id="level-5-reward"></td><td id="level-6-reward"></td>
-                    <td id="level-7-reward"></td><td id="level-8-reward"></td><td id="level-9-reward">0</td><td id="level-10-reward"></td></tr>
+                    <tr><th>Level:</th><th>0</th><th>1</th><th>2</th><th>3</th><th>4</th><th>5</th><th>6</th><th>7</th><th>8</th><th>9</th><th>10</th><th>F</th></tr>
+                    <tr><th id="total-count">Total:</th><td id="level-0-count"></td><td id="level-1-count"></td><td id="level-2-count"></td><td id="level-3-count"></td>
+                    <td id="level-4-count"></td><td id="level-5-count"></td><td id="level-6-count"></td><td id="level-7-count"></td>
+                    <td id="level-8-count"></td><td id="level-9-count"></td><td id="level-10-count"></td><td id="level-11-count"></td></tr>
+                    <tr><th>QORT/Minter/1000</th><td>0</td><td id="level-1-reward"></td><td id="level-2-reward"></td><td id="level-3-reward"></td>
+                    <td id="level-4-reward"></td><td id="level-5-reward"></td><td id="level-6-reward"></td><td id="level-7-reward"></td>
+                    <td id="level-8-reward"></td><td id="level-9-reward"></td><td id="level-10-reward"></td><td id="level-11-reward"></td></tr>
                 </thead>
                 <tbody>
                 </tbody>
