Fix QORT/1000 blocks

--- a/websites.html
+++ b/websites.html
@@ -13,7 +13,7 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-websites"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | Websites | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | <a href="taxes.html">Taxes</a> | <a href="extra.html">Extra</a></span></p>
+                <p><span id="menu-websites"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | Websites | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | <a href="extra.html">Extra</a></span></p>
             </div>
         </section>
         
