--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-home">Home | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | <a href="taxes.html">Taxes</a> | <a href="extra.html">Extra</a></span></p>
+                <p><span id="menu-home">Home | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | <a href="extra.html">Extra</a></span></p>
                 <p>Switch to <a href="index.html">New</a> Version</p>
             </div>
         </section>
