--- a/polls.html
+++ b/polls.html
@@ -13,7 +13,7 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-polls"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | Polls | <a href="assets.html">Assets</a> | <a href="taxes.html">Taxes</a> | <a href="extra.html">Extra</a></span></p>
+                <p><span id="menu-polls"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | <a href="txs.html">Transactions</a> | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a> | <a href="websites.html">Websites</a> | Polls | <a href="assets.html">Assets</a> | <a href="extra.html">Extra</a></span></p>
             </div>
         </section>
         
