--- a/txs.html
+++ b/txs.html
@@ -13,7 +13,7 @@
     <main>
         <section id="menu-bar">
             <div id="menu-list">
-                <p><span id="menu-txs"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | Transactions | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a></span> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | <a href="taxes.html">Taxes</a> | <a href="extra.html">Extra</a></p>
+                <p><span id="menu-txs"><a href="home.html">Home</a> | <a href="blocks.html">Blocks</a> | Transactions | <a href="trades.html">Trades</a> | <a href="accounts.html">Accounts</a> | <a href="apps.html">Apps</a></span> | <a href="websites.html">Websites</a> | <a href="polls.html">Polls</a> | <a href="assets.html">Assets</a> | <a href="extra.html">Extra</a></p>
             </div>
         </section>
         
